Bug 1133449 - [B2G] The default audio type didn't be set correctly when the call screen app is launched. r=baku